# youtube-cli

./: Cargo.toml  LICENSE  README
scripts/: keymaps
youtube-api/: Cargo.toml
youtube-api/src/: api.rs  browse.rs  config.rs  helper.rs  lib.rs  player.rs  search.rs  structs.rs  suggestions.rs
youtube-cli/: Cargo.toml
youtube-cli/src/: app.rs  config.rs  layout.rs  main.rs  player.rs  playlist.rs  search.rs  select.rs  util.rs
youtube-cli/src/handler/: drawer.rs  general.rs  generic.rs  mod.rs  player.rs  playlist.rs  results.rs  search.rs
youtube-cli/src/renderer/: body.rs  footer.rs  header.rs  help.rs  keymaps.rs  mod.rs  util.rs
