[package]
name = "youtube-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
youtube-api = { path = "../youtube-api" }
crossterm = "0.27.0"
libmpv = { git = "https://github.com/ParadoxSpiral/libmpv-rs", version = "2.0.1" }
ratatui = { version = "0.26.1", features = ["all-widgets"] }
tokio = { version = "1.36.0", features = ["full"] }
tui-textarea = "0.4.0"
bincode = "1.3.3"
serde = { version = "1.0.197", features = ["derive"] }
directories = "5.0.1"
serde_with = "3.7.0"
